<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <!--<item
            android:id="@+id/nav_GreateWall"
            android:icon="@drawable/menu_great_wall"
            android:title="@string/great_wall"/>
        <item
            android:id="@+id/nav_Christ"
            android:icon="@drawable/menu_christ_the_redeemer"
            android:title="@string/christ" />
        <item
            android:id="@+id/nav_Petra"
            android:icon="@drawable/menu_petra"
            android:title="@string/petra" />
        <item
            android:id="@+id/nav_TajMahal"
            android:icon="@drawable/menu_taj_mahal"
            android:title="@string/taj_mahal" />
        <item
            android:id="@+id/nav_MachuPichu"
            android:icon="@drawable/menu_machu_pichu"
            android:title="@string/machu_pichu" />
        <item
            android:id="@+id/nav_ChichenItza"
            android:icon="@drawable/menu_chichen_itza"
            android:title="@string/chichen_itza" />
        <item
            android:id="@+id/nav_Colosseum"
            android:icon="@drawable/menu_colosseum"
            android:title="@string/the_colosseum"/>-->
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/menu_great_wall"
            android:title="@string/great_wall" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/menu_christ_the_redeemer"
            android:title="@string/christ" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/menu_petra"
            android:title="@string/petra" />
    </group>
</menu>