<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

<!--    <fragment
        android:id="@+id/nav_GreateWall"
        android:name="com.example.wonderoftheworld.WonderFragment"
        android:label="@string/great_wall"
        tools:layout="@layout/fragment_wonder" />
    <fragment
        android:id="@+id/nav_Christ"
        android:name="com.example.wonderoftheworld.WonderFragment"
        android:label="@string/christ"
        tools:layout="@layout/fragment_wonder" />
    <fragment
        android:id="@+id/nav_Petra"
        android:name="com.example.wonderoftheworld.WonderFragment"
        android:label="@string/petra"
        tools:layout="@layout/fragment_wonder" />
    <fragment
        android:id="@+id/nav_TajMahal"
        android:name="com.example.wonderoftheworld.WonderFragment"
        android:label="@string/taj_mahal"
        tools:layout="@layout/fragment_wonder" />
    <fragment
        android:id="@+id/nav_MachuPichu"
        android:name="com.example.wonderoftheworld.WonderFragment"
        android:label="@string/machu_pichu"
        tools:layout="@layout/fragment_wonder" />
    <fragment
        android:id="@+id/nav_ChichenItza"
        android:name="com.example.wonderoftheworld.WonderFragment"
        android:label="@string/chichen_itza"
        tools:layout="@layout/fragment_wonder" />
    <fragment
        android:id="@+id/nav_Colosseum"
        android:name="com.example.wonderoftheworld.WonderFragment"
        android:label="@string/the_colosseum"
        tools:layout="@layout/fragment_wonder" />-->
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.wonderoftheworld.ui.home.HomeFragment"
        android:label="@string/great_wall"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.wonderoftheworld.GalleryFragment"
        android:label="@string/chichen_itza"
        tools:layout="@layout/fragment_gallery" />
    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.wonderoftheworld.ui.slideshow.SlideshowFragment"
        android:label="@string/petra"
        tools:layout="@layout/fragment_slideshow" />
</navigation>